# conference_scheduling

./: preferences.csv  pyproject.toml  schedule.py  test_schedule.py
